--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b3f17c">  <td>19/12/29 19:14:15</td>   <td>0</td> <td title="&gt;&gt;Commonfunctions.launchbrowser()[pri:0, instance:TestCases.Logintest@551aa95a]">&gt;&gt;launchbrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@674483268</td>   <td></td> </tr>
-<tr bgcolor="968ab9">  <td>19/12/29 19:14:32</td>   <td>16307</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Logintest.logintestcase()[pri:0, instance:TestCases.Logintest@551aa95a]">logintestcase</td> 
-  <td>main@674483268</td>   <td></td> </tr>
-<tr bgcolor="b3f17c">  <td>19/12/29 19:14:32</td>   <td>16600</td> <td title="&lt;&lt;Commonfunctions.closebrowser()[pri:0, instance:TestCases.Logintest@551aa95a]">&lt;&lt;closebrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@674483268</td>   <td></td> </tr>
+<tr bgcolor="846679">  <td>20/06/12 14:50:07</td>   <td>0</td> <td title="&gt;&gt;Commonfunctions.launchbrowser()[pri:0, instance:TestCases.LoginDataProviderex@131276c2]">&gt;&gt;launchbrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@710239027</td>   <td></td> </tr>
+<tr bgcolor="997ed7">  <td>20/06/12 14:50:30</td>   <td>23206</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginDataProviderex.logintestcase(java.lang.String, java.lang.String)[pri:0, instance:TestCases.LoginDataProviderex@131276c2]">logintestcase</td> 
+  <td>main@710239027</td>   <td></td> </tr>
+<tr bgcolor="846679">  <td>20/06/12 14:50:53</td>   <td>46021</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Commonfunctions.failcheck(org.testng.ITestResult)[pri:0, instance:TestCases.LoginDataProviderex@131276c2]">&lt;&lt;failcheck</td> 
+<td>&nbsp;</td>  <td>main@710239027</td>   <td></td> </tr>
+<tr bgcolor="997ed7">  <td>20/06/12 14:50:53</td>   <td>46027</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginDataProviderex.logintestcase(java.lang.String, java.lang.String)[pri:0, instance:TestCases.LoginDataProviderex@131276c2]">logintestcase</td> 
+  <td>main@710239027</td>   <td></td> </tr>
+<tr bgcolor="846679">  <td>20/06/12 14:51:33</td>   <td>86221</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Commonfunctions.failcheck(org.testng.ITestResult)[pri:0, instance:TestCases.LoginDataProviderex@131276c2]">&lt;&lt;failcheck</td> 
+<td>&nbsp;</td>  <td>main@710239027</td>   <td></td> </tr>
+<tr bgcolor="846679">  <td>20/06/12 14:51:34</td>   <td>87600</td> <td title="&lt;&lt;Commonfunctions.closebrowser()[pri:0, instance:TestCases.LoginDataProviderex@131276c2]">&lt;&lt;closebrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@710239027</td>   <td></td> </tr>
 </table>
