--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Shopping_Test_suite">
-                    <span>D:\Eclipse\EclipseWorkspace\SeleniumFrameworkArt\TestNGSuite.xml</span>
+                    <span>C:\Users\karthik\git\SeleniumFrameworkArt\TestNGSuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -130,21 +130,6 @@
           <div class="suite-Shopping_Test_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">TestCases.AddCartTest</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="AddCartTestCase">
-                  </a> <!-- AddCartTestCase -->
-                  <span class="method-name">AddCartTestCase</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Shopping_Test_suite-class-passed -->
-          <div class="suite-Shopping_Test_suite-class-passed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
               <span class="class-name">TestCases.Logintest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
@@ -153,6 +138,21 @@
                   <a name="logintestcase">
                   </a> <!-- logintestcase -->
                   <span class="method-name">logintestcase</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Shopping_Test_suite-class-passed -->
+          <div class="suite-Shopping_Test_suite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">TestCases.AddCartTest</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="AddCartTestCase">
+                  </a> <!-- AddCartTestCase -->
+                  <span class="method-name">AddCartTestCase</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -175,7 +175,7 @@
         </div> <!-- panel Shopping_Test_suite -->
         <div panel-name="test-xml-Shopping_Test_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">D:\Eclipse\EclipseWorkspace\SeleniumFrameworkArt\TestNGSuite.xml</span>
+            <span class="header-content">C:\Users\karthik\git\SeleniumFrameworkArt\TestNGSuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -252,15 +252,15 @@ data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'AddCartTestCase')
 data.setCell(0, 2, 'TestCases.AddCartTest')
-data.setCell(0, 3, 85293);
+data.setCell(0, 3, 85962);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'logintestcase')
 data.setCell(1, 2, 'TestCases.Logintest')
-data.setCell(1, 3, 26522);
+data.setCell(1, 3, 27057);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'LogoutTestCase')
 data.setCell(2, 2, 'TestCases.Logout')
-data.setCell(2, 3, 520);
+data.setCell(2, 3, 810);
 window.suiteTableData['Shopping_Test_suite']= { tableData: data, tableDiv: 'times-div-Shopping_Test_suite'}
 return data;
 }
@@ -308,37 +308,37 @@ return data;
               <div class="chronological-class-name">TestCases.Logintest</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">logintestcase</span>
-                <span class="method-start">20521 ms</span>
+                <span class="method-start">38569 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">failcheck([TestResult name=logintestcase status=SUCCESS method=Logintest.logintestcase()[pri:1, instance:TestC...)</span>
-                <span class="method-start">47081 ms</span>
+                <span class="method-start">65647 ms</span>
               </div> <!-- configuration-method after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">TestCases.AddCartTest</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">AddCartTestCase</span>
-                <span class="method-start">47217 ms</span>
+                <span class="method-start">65843 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">failcheck([TestResult name=AddCartTestCase status=SUCCESS method=AddCartTest.AddCartTestCase()[pri:2, instance...)</span>
-                <span class="method-start">132564 ms</span>
+                <span class="method-start">151834 ms</span>
               </div> <!-- configuration-method after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">TestCases.Logout</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">LogoutTestCase</span>
-                <span class="method-start">132618 ms</span>
+                <span class="method-start">151923 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">failcheck([TestResult name=LogoutTestCase status=SUCCESS method=Logout.LogoutTestCase()[pri:3, instance:TestCa...)</span>
-                <span class="method-start">133147 ms</span>
+                <span class="method-start">152737 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-suite after">
                 <span class="method-name">closebrowser</span>
-                <span class="method-start">133164 ms</span>
+                <span class="method-start">152768 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
