Added Screenshot with Exception in Extent Report

--- a/test-output/old/Shopping Test suite/toc.html
+++ b/test-output/old/Shopping Test suite/toc.html
@@ -22,24 +22,24 @@
 </tr></table>
 <table width='100%' class='test-failed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>RegistrationTest (0/0/0)</td><td valign='top' align='right'>
-  <a href='RegistrationTest.html' target='mainFrame'>Results</a>
-</td></tr></table>
-</td></tr><p/>
-</table>
-
-<table width='100%' class='test-passed'>
-<tr><td>
-<table style='width: 100%'><tr><td valign='top'>AddCartTest (1/0/0)</td><td valign='top' align='right'>
+<table style='width: 100%'><tr><td valign='top'>AddCartTest (0/1/0)</td><td valign='top' align='right'>
   <a href='AddCartTest.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
 
-<table width='100%' class='test-passed'>
+<table width='100%' class='test-failed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>LogOutTest (1/0/0)</td><td valign='top' align='right'>
+<table style='width: 100%'><tr><td valign='top'>LogOutTest (0/1/0)</td><td valign='top' align='right'>
   <a href='LogOutTest.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-failed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>RegistrationTest (0/0/0)</td><td valign='top' align='right'>
+  <a href='RegistrationTest.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
