added surfire plugin to run suite from pom

--- a/test-output/old/Shopping Test suite/methods-not-run.html
+++ b/test-output/old/Shopping Test suite/methods-not-run.html
@@ -1,3 +1,4 @@
 <h2>Methods that were not run</h2><table>
 <tr><td>TestCases.Registrationtest.Registrationtestcase</td></tr>
+<tr><td>TestCases.AddCartTest.AddCartTestCase</td></tr>
 </table>
